feat: add button which show or hide description of the project in mobile vtrsion

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="portfolio__items-container">
                 <div class="portfolio__slider-item active">
                     <div class="portfolio__slide-content">
-                        <img class="portfolio__project-image" src="assets/img/repair.png" alt="project">
-                        <div class="portfolio__project-descr">
+                        <img class="portfolio__project-image" src="assets/img/repair.jpg" alt="project">
+                        <div class="portfolio__project-descr" id="descr-project1">
                             <h3 class="portfolio__slide-title">Repair-design-project</h3>
                             <ul  class="portfolio__slide-list">
                                 <li class="portfolio__list-item">Pesponsive</li>
@@ -72,11 +72,12 @@
                             <a class="portfolio__link" href="projects/index2.html">take a look</a>
                         </div>
                     </div>
+                    <div class="portfolio__button-for-descr" id="button-project1"></div>
                 </div>
                 <div class="portfolio__slider-item">
                     <div class="portfolio__slide-content">
-                        <img class="portfolio__project-image" src="assets/img/THEYALOW.jpg" alt="project">
-                        <div class="portfolio__project-descr">
+                        <img class="portfolio__project-image" src="assets/img/theyallow.jpg" alt="project">
+                        <div class="portfolio__project-descr" id="descr-project2">
                             <h3 class="portfolio__slide-title">Theyallow</h3>
                             <ul class="portfolio__list">
                                 <li class="portfolio__list-item">Pesponsive</li>
@@ -87,7 +88,9 @@
                             <a class="portfolio__link" href="projects/index1.html">take a look</a>
                         </div>
                     </div>
+                    <div class="portfolio__button-for-descr" id="button-project2"></div>
                 </div>
+               
             </div>
             <div class="control left">
                 <div class="arrow left">&lt;</div>
@@ -97,8 +100,6 @@
             </div>
         </div>
     </section>
-
     <script src="js/main.js"></script>
-
 </body>
 </html>
