feat: add buttons for preview

--- a/projects/index1.html
+++ b/projects/index1.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
         <iframe class="iframe" id="iframe" title="theyallow" scrolling="no" src="theyallow/index.html"></iframe>
         <div class="buttons">
-           <button class="buttons__mobile-desktop" id="swich"></button>
-           <button onclick="javascript:history.back();" class="buttons__back" id="back">back</button>
+           <button class="buttons__mobile-desktop" id="swich2"></button>
+           <button class="buttons__back" id="back">back</button>
         </div>
     </div>
     <script src="buttons2.js"></script>
