--- a/projects/index2.html
+++ b/projects/index2.html
@@ -12,7 +12,7 @@
    
         <div class="buttons">
            <button class="buttons__mobile-desktop" id="swich"></button>
-           <button onclick="javascript:history.back();" class="buttons__back" id="back">back</button>
+           <button class="buttons__back" id="back">back</button>
         </div>
     </div>
     <script src="buttons.js"></script>
