--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <li class="portfolio__list-item">Flexbox</li>
                                 <li class="portfolio__list-item">BEM</li>
                             </ul>
-                            <a class="portfolio__link" href="projects/index2.html">take a look</a>
+                            <a class="portfolio__link" id="link1" href="projects/index2.html">take a look</a>
                         </div>
                     </div>
                     <div class="portfolio__button-for-descr" id="button-project1"></div>
@@ -85,7 +85,7 @@
                                 <li class="portfolio__list-item">Browser Support: Google Chrome, Mozilla Firefox, Microsoft Edge.</li>
                                 <li class="portfolio__list-item">pure HTML and CSS</li>
                             </ul>
-                            <a class="portfolio__link" href="projects/index1.html">take a look</a>
+                            <a class="portfolio__link" id="link2" href="projects/index1.html">take a look</a>
                         </div>
                     </div>
                     <div class="portfolio__button-for-descr" id="button-project2"></div>
